v4l2_vda: Skip flush if before any buffer is decoded.

When VDA enqueue flush input buffer to the Tegra driver before
enqueuing any normal input buffer, Tegra driver will stuck.

Now for the devices which do not support V4L2 decoder command, if we
call Flush() before decoding any buffer, we skip sending an empty
buffer to the driver and notify flush is done.

BUG=chromium:845627
TEST=pass video_decode_accelerator_unittest on nyan-big and peach-pit


Cq-Include-Trybots: luci.chromium.try:android_optional_gpu_tests_rel;luci.chromium.try:linux_optional_gpu_tests_rel;luci.chromium.try:mac_optional_gpu_tests_rel;luci.chromium.try:win_optional_gpu_tests_rel
Change-Id: I34a5ec76d95fac8f5bedd3ead08202b1a4e41dcd
Reviewed-on: https://chromium-review.googlesource.com/1127559
Commit-Queue: Chih-Yu Huang <akahuang@chromium.org>
Reviewed-by: Pawel Osciak <posciak@chromium.org>
Cr-Commit-Position: refs/heads/master@{#580811}
Former-commit-id: 8bfa58f5c8b533c785a3434b74d55792c31173da